# bgl-dialog-manager

./: CONTRIBUTING.md  Cargo.toml  README.md  pnpm-lock.yaml
.github/: .env  file-filters.yml
clients/js/: CONTRIBUTING.md  package.json
clients/js/src/: plugin.ts
clients/js/test/: _setup.ts  getProgram.test.ts
configs/: kinobi.cjs  shank.cjs  validator.cjs
idls/: bgl_dialog_manager.json
programs/bgl-dialog-manager/: Cargo.toml
programs/bgl-dialog-manager/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  pda.rs  processor.rs  state.rs
programs/bgl-dialog-manager/src/instruction/: append_dialog.rs  create_dialog.rs  create_visitor.rs  mod.rs
programs/bgl-dialog-manager/src/processor/: append_dialog.rs  create_dialog.rs  create_visitor.rs  mod.rs
programs/bgl-dialog-manager/tests/: append_dialog.rs  create.rs  create_dialog.rs  create_visitor.rs
