[package]
name = "bgl-dialog-manager"
version = "0.1.0"
edition = "2021"
readme = "./README.md"
license-file = "../../LICENSE"
publish = false

[dependencies]
solana-program = "=1.14.18"
shank = "0.0.12"
borsh = "0.9.3"
thiserror = "~1.0"
num-derive = "0.3.3"
num-traits = "~0.2"
mpl-utils = "0.2.0"
solana_data_structs = "0.1.1"
winnow = "=0.4.1"
toml_datetime = "=0.6.1"

[features]
test-bpf = []

[dev-dependencies]
assert_matches = "1.5.0"
solana-program-test = "=1.14.18"
solana-sdk = "=1.14.18"

[lib]
crate-type = ["cdylib", "lib"]
